fixed jumping numbers when toggling conversion per stock

--- a/source/components/stock/stock.module.scss
+++ b/source/components/stock/stock.module.scss
@@ -125,6 +125,10 @@
   }
 }
 
+.innerNumber {
+  min-width: 4.2em;
+}
+
 .isPositive {
   color: $green;
 }
